[project]
name = "linkbay-ai"
version = "0.2.0"
description = "Enterprise AI orchestration library - Multi-provider fallback, cost control, semantic caching, streaming, conversation management"
authors = [
    {name = "Alessio Quagliara", email = "quagliara.alessio@gmail.com"},
]
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "numpy>=1.20.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}  # Usa questa sintassi
keywords = ["ai", "llm", "openai", "deepseek", "orchestration", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",  # Aggiungi il classifier
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
cache = [
    "sentence-transformers>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
all = [
    "sentence-transformers>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]  # Usa una versione stabile
build-backend = "setuptools.build_meta"